[package]
name = "Snooze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we want docking feature
imgui = { version = "0.11.0", features = ["docking"] }
glium = "0.32.1"
raw-window-handle = "0.5.0"
winit = "0.28.6"
glutin-winit = "0.4.0-beta.0"
imgui-glow-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
curl = "0.4.44"
glow = "0.12.0"
memoffset = "0.9.0"
glutin = "0.29.1"
image = "0.24.6"
