[package]
name = "Snooze"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0" 
egui = "0.30.0"  
egui_json_tree = "0.10.0"  
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
log = "0.4.25"
env_logger = "0.11.6"
colorful = "0.3.2"
egui_code_editor = "0.2.11"
regex = "1.11.1"


[[bin]]
name = "Snooze"
path = "main.rs"


